--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Time Machine theme
-description: Time Machine is a theme for GitHub Pages.
+title: Lohit Marla
+description: Lohit Marla's GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-time-machine
