--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Lohit Marla
-description: Lohit Marla's GitHub Pages.
+description: My professional experience
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-slate
